--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .DS_Store
 journal_articles/
-journal_articles/*
+journal_articles/**
 Supplementals/*
 scripts/jupyter_notebooks/.ipynb_checkpoints/
