--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 journal_articles/
 journal_articles/**
-**/journal_articles/
+**journal_articles/
 Supplementals/*
 scripts/jupyter_notebooks/.ipynb_checkpoints/
