--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /journal_articles/*
 .ipynb_checkpoints
 .Rhistory
-/data/1_raw/*
-/data/2_cleaned/*
-/data/3_merged_data_for_models/*
-/data/output/*
+/data/1_raw/
+/data/2_cleaned/
+/data/3_merged_data_for_models/
+/data/output/
 # Ignore Mac DS_Store files
 .DS_Store
